<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AuthorizationFragment"
    android:background="@color/light_grey_two">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.App.Toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/authorization"
            app:titleCentered="true"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/spacing_l"
            android:background="@color/light_grey_two">

            <TextView
                android:id="@+id/tv_external_auth_label"
                style="@style/TextStyle10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxl_2"
                app:layout_constraintWidth_percent="0.8"
                android:breakStrategy="balanced"
                android:text="@string/external_auth_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_auth_vk"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                app:layout_constraintTop_toBottomOf="@id/tv_external_auth_label"
                app:layout_constraintStart_toStartOf="@id/tv_external_auth_label"
                android:layout_marginTop="@dimen/spacing_l"
                android:layout_marginStart="@dimen/spacing_xl"
                android:src="@drawable/logo_vk"
                android:contentDescription="@string/description_auth_by_vk"/>

            <ImageButton
                android:id="@+id/btn_auth_fb"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                app:layout_constraintTop_toTopOf="@id/btn_auth_vk"
                app:layout_constraintBottom_toBottomOf="@id/btn_auth_vk"
                app:layout_constraintStart_toEndOf="@id/btn_auth_vk"
                app:layout_constraintEnd_toStartOf="@id/btn_auth_ok"
                android:src="@drawable/logo_fb"
                android:contentDescription="@string/description_auth_by_fb"/>

            <ImageButton
                android:id="@+id/btn_auth_ok"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                app:layout_constraintTop_toTopOf="@id/btn_auth_vk"
                app:layout_constraintBottom_toBottomOf="@id/btn_auth_vk"
                app:layout_constraintEnd_toEndOf="@id/tv_external_auth_label"
                android:layout_marginEnd="@dimen/spacing_xl"
                android:src="@drawable/logo_ok"
                android:contentDescription="@string/description_auth_by_ok"/>

            <TextView
                style="@style/TextStyle10"
                android:id="@+id/tv_internal_auth_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_auth_vk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_xxl_2"
                android:text="@string/internal_auth_label"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.InputTextLayout"
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_internal_auth_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_l"
                android:hint="@string/auth_email"
                app:placeholderText="@string/auth_placeholder_email"
                app:hintTextAppearance="@style/TextStyle13"
                app:expandedHintEnabled="false"
                app:boxBackgroundColor="@color/light_grey_two">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.InputTextLayout"
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_xl"
                android:hint="@string/auth_password"
                app:placeholderText="@string/auth_placeholder_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Widget.Material3.Button"
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/spacing_xl"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                android:textAppearance="@style/TextStyle17"
                android:text="@string/auth_enter"
                android:backgroundTint="@color/bg_button"
                android:enabled="false"/>

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/btn_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_enter"
                app:layout_constraintStart_toStartOf="@id/btn_enter"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/forgot_password"/>

            <Button
                style="@style/Widget.Material3.Button.TextButton"
                android:id="@+id/btn_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_enter"
                app:layout_constraintEnd_toEndOf="@id/btn_enter"
                android:layout_marginTop="@dimen/spacing_l"
                android:text="@string/registration"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>